--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,15 @@
 html {
   box-sizing: content-box;
   background-color: #191923;
+  font-family: Lato, sans-serif;
 }
 
 html * {
   box-sizing: inherit;
+}
+
+h1,
+p {
+  text-align: center;
+  color: #eee;
 }
